Added and styled searchbar to navbar section

--- a/index.html
+++ b/index.html
@@ -16,21 +16,28 @@
 			<div class="navbar">
 				<div class="title">
 					<h3>
-						<a href="pumpkins.html">Pumpkins</a>
+						<a href="index.html">Pumpkins</a>
 					</h3>
-					<a href="pumpkins.html">
+					<a href="index.html">
 						<img src="pumpkin-logo2.png" class="title-logo">
 					</a>
 				</div>			
 			</div>
 			<div class="navlinks">
-				<a href="" class="navlink">Home</a>
+				<a href="index.html" class="navlink">Home</a>
 				<a href="" class="navlink">Types of Pumpkins</a>
 				<a href="" class="navlink">Gallery</a>
 				<a href="" class="navlink">Growing a pumpkin</a>
 				<a href="" class="navlink">Pumpkin Recipes</a>
 				<a href="" class="navlink">Fun Facts</a>
+				<div class="search">
+					<i class="fa fa-search"></i>
+					<form>
+						<input type="search" placeholder="Search..." class="searchbar">
+					</form>
+				</div>
 			</div>
+			
 			<button type="button" class="nav-btn">
 				<i class="fas fa-bars"></i>
 			</button>
