Added style changes to searchbar

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 	</div>
 	
 	<main>
-		<div class="homepage-content-header">
-			
-		</div>
+		<div class="homepage-content-header"></div>
+	
 		<div class="homepage-content-container">
 			<div class="homepage-content">
 				<p>Welcome to the pumpkins website! Autumn is a beautiful season and we are here to celebrate the lovely fruit that is the pumpkin.</p>
