Added tab icon, types-of-pumpkins.html, updated index.html, and updated pumpkinsstyle.css. CSS file includes styling types-of-pumpkins.html page

--- a/index.html
+++ b/index.html
@@ -8,45 +8,50 @@
 	<link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
-	<div class="navcenter">
-		<div class="navheader">
-			<div class="navbar">
-				<div class="title">
-					<h3>
-						<a href="index.html">Pumpkins</a>
-					</h3>
-					<a href="index.html">
-						<img src="pumpkin-logo2.png" class="title-logo">
-					</a>
-				</div>			
-			</div>
-			<div class="navlinks">
-				<a href="index.html" class="navlink">Home</a>
-				<a href="" class="navlink">Types of Pumpkins</a>
-				<a href="" class="navlink">Gallery</a>
-				<a href="" class="navlink">Growing a pumpkin</a>
-				<a href="" class="navlink">Pumpkin Recipes</a>
-				<a href="" class="navlink">Fun Facts</a>
-				<div class="search">
-					<i class="fa fa-search"></i>
-					<form>
-						<input type="search" placeholder="Search..." class="searchbar">
-					</form>
+	<!--BEGIN NAV AND HEADER-->
+	<header>
+		<div class="navcenter">
+			<div class="navheader">
+				<div class="navbar">
+					<div class="title">
+						<h3>
+							<a href="index.html">Pumpkins</a>
+						</h3>
+						<a href="index.html">
+							<img src="pumpkin-logo2.png" class="title-logo">
+						</a>
+					</div>			
 				</div>
+				<div class="navlinks">
+					<a href="index.html" class="navlink">Home</a>
+					<a href="types-of-pumpkins.html" class="navlink">Types of Pumpkins</a>
+					<a href="" class="navlink">Gallery</a>
+					<a href="" class="navlink">Growing a pumpkin</a>
+					<a href="" class="navlink">Pumpkin Recipes</a>
+					<a href="" class="navlink">Fun Facts</a>
+					<div class="search">
+						<i class="fa fa-search"></i>
+						<form>
+							<input type="search" placeholder="Search..." class="searchbar">
+						</form>
+					</div>
+				</div>
+				
+				<button type="button" class="nav-btn">
+					<i class="fas fa-bars"></i>
+				</button>
 			</div>
 			
-			<button type="button" class="nav-btn">
-				<i class="fas fa-bars"></i>
-			</button>
 		</div>
-		
-	</div>
-	
-	<main>
-		<div class="homepage-content-header"></div>
+		<div class="page-content-header"></div>
+	</header>
+	<!--END OF NAV AND HEADER-->
+
+	<!--HOMEPAGE MAIN CONTENT-->
+	<main>		
 	
 		<div class="homepage-content-container">
 			<div class="homepage-content">
@@ -54,9 +59,14 @@
 			</div>
 		</div>
 	</main>
+	<!--END HOMEPAGE MAIN CONTENT-->
+
+	<!--BEGIN FOOTER-->
 	<footer class="page-footer">
 		<p>&copy; Copyright The Pumpkins Website by Tiffany Chung, 2021</p>
 	</footer>
+	<!--END FOOTER
+	-->
 	<script src="pumpkinsjs.js"></script>
 </body>
 </html>
